# PopRL

./: README.md  pyproject.toml
examples/: bottleneck.slim  growth.slim  island.slim  msprime_training.py  msprime_training_multimodal.py  slim_training.py
poprl/: __init__.py  api.py  catalog.py  task.py
poprl/envs/: SLiMEnv.py  msprimeEnv.py
poprl/observations/: pi.py  sfs.py
tests/: test_catalog.py  test_env.py  test_observations.py  test_task.py
