[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poprl"
authors = [{name = "Niko Zuppas", email = "zuppas.3@osu.edu"}]
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "msprime",
    "stdpopsim",
    "gymnasium",
    "stable-baselines3",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["poprl*"]

[project.urls]
Home = "https://github.com/nzupp/SLiM-Gym"
